Enforce Java formatting with Spotless
Add Spotless Java formatting to the Gradle build and make `check` run `spotlessCheck` alongside integration tests. The formatter is scoped to `src/main/java` and `src/test/java`, avoids `src_v19` and generated sources, and uses `googleJavaFormat` 1.28.0 for Java 25 compatibility.