@@ -7,8 +7,7 @@ import java.lang.reflect.Modifier;
 
 public final class ReflectionUtil {
 
-  private ReflectionUtil() {
-  }
+  private ReflectionUtil() {}
 
   public static void setFieldValue(Object obj, String propertyName, Object newValue)
       throws Exception {
@@ -16,7 +15,8 @@ public final class ReflectionUtil {
     setPropertyRecursive(obj, propertyPath, 0, newValue);
   }
 
-  private static void setPropertyRecursive(Object currentObject, String[] propertyPath, int pathIndex, Object newValue)
+  private static void setPropertyRecursive(
+      Object currentObject, String[] propertyPath, int pathIndex, Object newValue)
       throws Exception {
     if (currentObject == null) {
       return;
@@ -36,7 +36,8 @@ public final class ReflectionUtil {
     // Intermediate field - check if it is an array
     if (field.getType().isArray()) {
       Class<?> componentType = field.getType().getComponentType();
-      // We are navigating through an array. The next part of the path is a property of the array element.
+      // We are navigating through an array. The next part of the path is a property of the array
+      // element.
       // E.g., layers.routable
       // The newValue is expected to be a comma-separated list of values for each array element.
       String[] valTokens = newValue.toString().split(",");
@@ -71,14 +72,16 @@ public final class ReflectionUtil {
     }
   }
 
-  private static Field getFieldByNameOrSerializedName(Class<?> clazz, String name) throws NoSuchFieldException {
+  private static Field getFieldByNameOrSerializedName(Class<?> clazz, String name)
+      throws NoSuchFieldException {
     for (Field field : clazz.getDeclaredFields()) {
       SerializedName annotation = field.getAnnotation(SerializedName.class);
       if (annotation != null && annotation.value().equals(name)) {
         return field;
       }
       if (field.getName().equals(name)) {
-        // Enforce that fields with a SerializedName must not be queried by their camelCase Java name
+        // Enforce that fields with a SerializedName must not be queried by their camelCase Java
+        // name
         if (annotation != null && !name.equals(name.toLowerCase())) {
           continue;
         }
@@ -103,13 +106,9 @@ public final class ReflectionUtil {
     }
     if (targetType == boolean.class || targetType == Boolean.class) {
       // convert "0" and "1" into their boolean values
-      if ("0"
-          .equals(value
-              .toString())) {
+      if ("0".equals(value.toString())) {
         value = "false";
-      } else if ("1"
-          .equals(value
-              .toString())) {
+      } else if ("1".equals(value.toString())) {
         value = "true";
       }
 
@@ -134,8 +133,7 @@ public final class ReflectionUtil {
   }
 
   /**
-   * Copy all non-null, and non-default fields from one object to another
-   * recursively
+   * Copy all non-null, and non-default fields from one object to another recursively
    *
    * @param source The source object
    * @param target The target object
@@ -145,9 +143,7 @@ public final class ReflectionUtil {
   public static int copyFields(Object source, Object target) {
     int numberOfFieldsChanged = 0;
 
-    for (Field field : source
-        .getClass()
-        .getDeclaredFields()) {
+    for (Field field : source.getClass().getDeclaredFields()) {
       try {
         // check if the field is static and skip it if it is
         if (Modifier.isStatic(field.getModifiers())) {
@@ -191,9 +187,7 @@ public final class ReflectionUtil {
             }
           } else
           // Check if the field is an enum
-          if (field
-              .getType()
-              .isEnum()) {
+          if (field.getType().isEnum()) {
             var enumType = (Class<Enum>) field.getType();
             var enumValue = Enum.valueOf(enumType, sourceValue.toString());
 
@@ -202,32 +196,21 @@ public final class ReflectionUtil {
             numberOfFieldsChanged++;
           } else
           // Check if the field is an array
-          if (field
-              .getType()
-              .isArray()) {
+          if (field.getType().isArray()) {
 
             // Is the array of primitive types or strings?
-            if (field
-                .getType()
-                .getComponentType()
-                .isPrimitive()
-                || field
-                    .getType()
-                    .getComponentType() == String.class) {
+            if (field.getType().getComponentType().isPrimitive()
+                || field.getType().getComponentType() == String.class) {
               // Only set the field if it is not null on the source object
               Object targetValue = field.get(target);
 
               int targetArrayLength = 0;
-              if (targetValue != null && targetValue
-                  .getClass()
-                  .isArray()) {
+              if (targetValue != null && targetValue.getClass().isArray()) {
                 targetArrayLength = java.lang.reflect.Array.getLength(targetValue);
               }
 
               int sourceArrayLength = 0;
-              if (sourceValue != null && sourceValue
-                  .getClass()
-                  .isArray()) {
+              if (sourceValue != null && sourceValue.getClass().isArray()) {
                 sourceArrayLength = java.lang.reflect.Array.getLength(sourceValue);
               }
 
@@ -244,7 +227,8 @@ public final class ReflectionUtil {
               Class<?> componentType = field.getType().getComponentType();
 
               Object targetArrayObj = field.get(target);
-              int targetLength = targetArrayObj != null ? java.lang.reflect.Array.getLength(targetArrayObj) : 0;
+              int targetLength =
+                  targetArrayObj != null ? java.lang.reflect.Array.getLength(targetArrayObj) : 0;
 
               if (targetLength >= sourceArray.length) {
                 // Merge source elements into existing target elements
@@ -260,7 +244,9 @@ public final class ReflectionUtil {
                 numberOfFieldsChanged += sourceArray.length;
               } else {
                 // Allocate a new target array of the specific component type
-                Object[] targetArray = (Object[]) java.lang.reflect.Array.newInstance(componentType, sourceArray.length);
+                Object[] targetArray =
+                    (Object[])
+                        java.lang.reflect.Array.newInstance(componentType, sourceArray.length);
                 for (int i = 0; i < sourceArray.length; i++) {
                   if (sourceArray[i] != null) {
                     Object targetElement = componentType.getDeclaredConstructor().newInstance();
@@ -276,10 +262,7 @@ public final class ReflectionUtil {
             // The field is an object, so we need to copy its fields
             Object targetField = field.get(target);
             if (targetField == null) {
-              targetField = field
-                  .getType()
-                  .getDeclaredConstructor()
-                  .newInstance();
+              targetField = field.getType().getDeclaredConstructor().newInstance();
               field.set(target, targetField);
             }
             numberOfFieldsChanged += copyFields(sourceValue, targetField);
@@ -288,7 +271,6 @@ public final class ReflectionUtil {
       } catch (Exception e) {
         FRLogger.error("Error copying fields", e);
       }
-
     }
 
     return numberOfFieldsChanged;
@@ -298,10 +280,7 @@ public final class ReflectionUtil {
     Object result = null;
 
     try {
-      result = field
-          .getType()
-          .getConstructor()
-          .newInstance();
+      result = field.getType().getConstructor().newInstance();
     } catch (NoSuchMethodException _) {
       // The field does not have a default constructor, this can usually the case if
       // the type is a primitive type
@@ -315,19 +294,11 @@ public final class ReflectionUtil {
         result = 0.0;
       } else if (field.getType() == boolean.class || field.getType() == Boolean.class) {
         result = false;
-      } else if (field
-          .getType()
-          .isArray()) {
+      } else if (field.getType().isArray()) {
         // create an empty array of the original type
-        result = java.lang.reflect.Array.newInstance(field
-            .getType()
-            .getComponentType(), 0);
-      } else if (field
-          .getType()
-          .isEnum()) {
-        result = field
-            .getType()
-            .getEnumConstants()[0];
+        result = java.lang.reflect.Array.newInstance(field.getType().getComponentType(), 0);
+      } else if (field.getType().isEnum()) {
+        result = field.getType().getEnumConstants()[0];
       } else if (Modifier.isTransient(field.getModifiers())) {
         result = null;
       } else {
